--- a/src/planner/mapping/package.xml
+++ b/src/planner/mapping/package.xml
@@ -6,9 +6,7 @@
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>
-
+  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
@@ -60,7 +58,9 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
-
+  <build_depend>map_generator</build_depend>
+  <exec_depend>map_generator</exec_depend>
+  <build_export_depend>map_generator</build_export_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
